# Raven

./: .air.toml  .codecov.yml  .coderabbit.yaml  .dockerignore  .env.ci  .env.example  .gitignore  .gitleaks.toml  .golangci.yml  .goreleaser.yaml  .mergify.yml  .trivyignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  DPA.md  Dockerfile  GOVERNANCE.md  LICENSE  MAINTAINERS.md  Makefile  Makefile.edge  PRIVACY.md  README.md  SECURITY.md  _config.yml  cliff.toml  coverage.out  docker-compose.chartdb.yml  docker-compose.ebpf.yml  docker-compose.edge.yml  docker-compose.yml  ee-LICENSE  ee-README.md  go.mod  go.sum  index.html  package.json
.githooks/: pre-commit  pre-push
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.serena/: project.yml
.well-known/: security.txt
ai-worker/: .dockerignore  Dockerfile  Makefile  pyproject.toml  requirements-dev.txt  requirements.txt
ai-worker/raven_worker/: __init__.py  __main__.py  agent.py  config.py  crypto.py  server.py  telemetry.py
ai-worker/raven_worker/ee/: README.md  __init__.py
ai-worker/raven_worker/ee/analytics/: __init__.py
ai-worker/raven_worker/ee/connectors/: __init__.py
ai-worker/raven_worker/http_internal/: __init__.py  app.py  summarize.py
ai-worker/raven_worker/memory/: __init__.py  store.py
ai-worker/raven_worker/processors/: __init__.py  chunker.py  parser.py  scraper.py
ai-worker/raven_worker/providers/: anthropic_provider.py  base.py  cohere_provider.py  openai_provider.py  registry.py
ai-worker/raven_worker/retrieval/: bm25_search.py  cache_repo.py  reranker.py  rrf.py  vector_search.py
ai-worker/raven_worker/services/: embedding.py  rag.py  semantic_cache.py
ai-worker/scripts/: generate_proto.sh
ai-worker/tests/: conftest.py  test_cache.py  test_chunker.py  test_embedding_providers.py  test_embedding_servicer.py  test_grpc_server.py  test_http_internal_summarize.py  test_parser.py  test_rag_service.py  test_registry.py  test_scraper.py  test_server.py  test_telemetry.py  test_voice_agent.py
ai-worker/tests/ee/: test_analytics.py  test_connectors.py
ai-worker/tests/processors/: test_chunk_metadata.py  test_html_parser.py  test_text_splitter.py
ai-worker/tests/retrieval/: test_bm25.py  test_cache_repo.py  test_embedding.py  test_ranking.py  test_rrf.py
ai-worker/tests/smoke/: test_real_providers.py
backup/: README.md  backup.sh  pgbackrest.conf  restore.sh
contracts/: openapi-stub.yaml
deploy/: cloudflare-pages.json
desktop/: README.md
desktop/src-tauri/: Cargo.toml  splash.html  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: main.rs
docs/: architecture.md  dependency-policy.md  project-status.md  quickstart.md  voice-agent-webrtc-research.md
frontend/: .env.example  .env.production  Dockerfile  README.md  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  vite.config.ts  wrangler.toml
landing/: .gitignore  index.html  next.config.mjs  package-lock.json  package.json  playwright.config.ts
migrations/: 00001_extensions_and_types.sql  00002_roles.sql  00003_organizations.sql  00004_users.sql  00005_workspaces.sql  00006_workspace_members.sql  00007_knowledge_bases.sql  00008_documents.sql  00009_sources.sql  00010_chunks_and_embeddings.sql  00011_llm_provider_configs.sql  00012_api_keys.sql  00013_chat.sql  00014_processing_events.sql  00015_rls_policies.sql  00016_processing_events.sql  00017_bm25_heading_index.sql  00018_api_keys_add_workspace.sql  00018_subscriptions.sql  00020_routing_rules.sql  00021_airbyte_connectors.sql  00022_security_rules.sql  00023_lead_profiles.sql  00024_webhook_configs.sql  00025_stranger_users.sql  00026_email_notifications.sql  00027_response_cache.sql  00028_user_identity.sql  migrations_test.go  (+11 more)
(+2111 files in other folders)
