[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "raven-worker"
version = "0.1.0"
description = "Raven AI Worker - gRPC service for document parsing, embedding, and RAG"
requires-python = ">=3.12"
dependencies = [
    "grpcio>=1.69.0",
    "grpcio-reflection>=1.69.0",
    "grpcio-health-checking>=1.69.0",
    "protobuf>=5.29.0",
    "pydantic-settings>=2.7.0",
    "structlog>=24.4.0",
    "opentelemetry-api>=1.29.0",
    "opentelemetry-sdk>=1.29.0",
    "opentelemetry-exporter-otlp>=1.29.0",
    "opentelemetry-instrumentation-grpc>=0.50b0",
]

[project.optional-dependencies]
dev = [
    "grpcio-tools>=1.69.0",
    "ruff>=0.9.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
]

[tool.setuptools.packages.find]
include = ["raven_worker*"]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = ["raven_worker/generated"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "SIM"]

[tool.ruff.lint.per-file-ignores]
"raven_worker/server.py" = ["N802"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
